--- a/Baseline_color_data_big.ipynb
+++ b/Baseline_color_data_big.ipynb
@@ -25,7 +25,8 @@
    },
    "outputs": [],
    "source": [
-    "import gen_input\n",
+    "import cPickle as pickle\n",
+    "import gzip\n",
     "import numpy as np\n",
     "import os\n",
     "from datetime import datetime\n",
@@ -35,33 +36,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "with gzip.open(\"data/svhn_full_color_norm.pkl\", \"rb\") as f:\n",
+    "  svhn_color = pickle.load(f)\n",
+    "  \n",
+    "svhn_train_data = svhn_color[\"train_data\"]\n",
+    "svhn_train_labels = svhn_color[\"train_labels\"]\n",
+    "svhn_test_data = svhn_color[\"test_data\"]\n",
+    "svhn_test_labels = svhn_color[\"test_labels\"]\n",
+    "\n",
+    "print svhn_train_data.shape, svhn_train_labels.shape\n",
+    "print svhn_test_data.shape, svhn_test_labels.shape\n",
+    "\n",
+    "svhn_color = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1024, 3)\n",
-      "(73257, 1024, 3)\n",
-      "(1024, 3)\n",
-      "(26032, 1024, 3)\n"
+      "255 255\n",
+      "1.0 0.435835 1.0 0.457967\n"
      ]
     }
    ],
    "source": [
-    "train_test_valid_split = [1., 0., 0.]\n",
-    "svhn_train = gen_input.read_data_sets(\"data/train_32x32.mat\", train_test_valid_split).train\n",
-    "svhn_test = gen_input.read_data_sets(\"data/test_32x32.mat\", train_test_valid_split).train\n",
+    "print svhn_train_data.max(), svhn_test_data.max() # this data is not normalized b/w 0-1\n",
     "\n",
-    "print svhn_train.images[0].shape\n",
-    "print svhn_train.images.shape\n",
-    "print svhn_test.images[0].shape\n",
-    "print svhn_test.images.shape"
+    "svhn_train_data = svhn_train_data.astype(np.float32)\n",
+    "svhn_train_data = np.multiply(svhn_train_data, 1.0 / 255.0)\n",
+    "svhn_test_data = svhn_test_data.astype(np.float32)\n",
+    "svhn_test_data = np.multiply(svhn_test_data, 1.0 / 255.0)\n",
+    "\n",
+    "print svhn_train_data.max(), svhn_train_data.mean(), svhn_test_data.max(), svhn_test_data.mean()"
    ]
   },
   {
@@ -76,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -152,12 +173,33 @@
     "# Normalize by subtracting per image, per channel means\n",
     "def normalize_batch(batch):\n",
     "  per_img_ch_means = batch.mean(axis=1)\n",
-    "  return batch - per_img_ch_means[:, np.newaxis, :]"
+    "  return batch - per_img_ch_means[:, np.newaxis, :]\n",
+    "\n",
+    "# hacky next_batch\n",
+    "def grab_next_train_batch(batch_num, data, labels, batch_size):\n",
+    "  assert len(labels) == len(data)\n",
+    "  total_images = len(data)\n",
+    "  assert batch_size <= total_images\n",
+    "  assert batch_num <= total_batches\n",
+    "  \n",
+    "  start = (batch_num * batch_size) % (len(svhn_train_data))\n",
+    "  end = start + batch_size\n",
+    "  \n",
+    "  next_batch = data[start:end], labels[start:end]\n",
+    "  return next_batch\n",
+    "\n",
+    "def grab_next_test_batch(data, labels, batch_size):\n",
+    "  idx = np.arange(len(data))\n",
+    "  np.random.shuffle(idx)\n",
+    "  idx = idx[:batch_size]\n",
+    "  \n",
+    "  next_batch = data[start:end], labels[start:end]\n",
+    "  return next_batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -182,7 +224,7 @@
     "\n",
     "  \n",
     "  with tf.name_scope('input'):\n",
-    "    x = tf.placeholder(tf.float32, shape=[None, 32*32, 3], name=\"x-input\") \n",
+    "    x = tf.placeholder(tf.float32, shape=[None, 32, 32, 3], name=\"x-input\") \n",
     "    y_ = tf.placeholder(tf.float32, shape=[None, 10], name=\"y-input\")\n",
     "    tf.add_to_collection('x', x)\n",
     "    tf.add_to_collection('y_', y_)\n",
@@ -190,24 +232,32 @@
     "  ###################\n",
     "  ##### Network #####\n",
     "  ###################\n",
-    "  with tf.name_scope('input_reshape'):\n",
-    "    input_reshaped = tf.reshape(x, [-1, 32, 32, 3])\n",
-    "    # tf.summary.image('input', input_reshaped, 5) # Optionally save 5 images to ensure reshape is working\n",
+    "  #   with tf.name_scope('input_reshape'):\n",
+    "  #     input_reshaped = tf.reshape(x, [-1, 32, 32, 3])\n",
+    "  #   tf.summary.image('input', input_reshaped, 5) # Optionally save 5 images to ensure reshape is working\n",
     "  \n",
-    "  conv1 = conv_layer(layer_name='conv1', input_tensor=input_reshaped, receptive_field=3, \n",
-    "                      channels_in=3, channels_out=32, pool=False, pool_size=2, pool_stride=2,\n",
+    "  conv1 = conv_layer(layer_name='conv1', input_tensor=x, receptive_field=3, \n",
+    "                      channels_in=3, channels_out=64, pool=False, pool_size=2, pool_stride=2,\n",
     "                      batch_norm=False, training=batch_norm_train_mode)\n",
     "  \n",
     "  conv2 = conv_layer(layer_name='conv2', input_tensor=conv1, receptive_field=3, \n",
-    "                    channels_in=32, channels_out=64, pool=True, pool_size=2, pool_stride=2,\n",
+    "                    channels_in=64, channels_out=64, pool=True, pool_size=2, pool_stride=2,\n",
     "                    batch_norm=False, training=batch_norm_train_mode)\n",
     "  \n",
-    "  last_conv = conv2\n",
+    "  conv3 = conv_layer(layer_name='conv3', input_tensor=conv2, receptive_field=5, \n",
+    "                    channels_in=64, channels_out=128, pool=False, pool_size=2, pool_stride=2,\n",
+    "                    batch_norm=False, training=batch_norm_train_mode)\n",
+    "  \n",
+    "  conv4 = conv_layer(layer_name='conv4', input_tensor=conv3, receptive_field=5, \n",
+    "                    channels_in=128, channels_out=128, pool=True, pool_size=2, pool_stride=2,\n",
+    "                    batch_norm=False, training=batch_norm_train_mode)\n",
+    "  \n",
+    "  last_conv = conv4\n",
     "  \n",
     "  with tf.name_scope('last_conv_flatten'):\n",
     "    conv_reshaped = tf.reshape(last_conv, [-1, flat_dimension(last_conv)])\n",
     "\n",
-    "  fc1 = dense_layer(layer_name='fc1', input_tensor=conv_reshaped, input_dim=flat_dimension(last_conv), output_dim=1024, decay=fc_decay)\n",
+    "  fc1 = dense_layer(layer_name='fc1', input_tensor=conv_reshaped, input_dim=flat_dimension(last_conv), output_dim=4096, decay=fc_decay)\n",
     "  #dropped1 = tf.nn.dropout(fc1, keep_prob)\n",
     "  \n",
     "#   fc2 = dense_layer(layer_name='fc2', input_tensor=fc1, input_dim=2048, output_dim=2048, decay=fc_decay)\n",
@@ -216,12 +266,14 @@
     "  last_fc = fc1\n",
     "  \n",
     "  # Do not apply softmax activation yet! use the identity\n",
-    "  logits = dense_layer(layer_name='output', input_tensor=last_fc, input_dim=1024, output_dim=10, act=tf.identity)\n",
+    "  logits = dense_layer(layer_name='output', input_tensor=last_fc, input_dim=4096, output_dim=10, act=tf.identity)\n",
     "  tf.add_to_collection('logits', logits)\n",
     "  \n",
-    "  print input_reshaped.shape\n",
+    "  #print input_reshaped.shape\n",
     "  print conv1.shape\n",
     "  print conv2.shape\n",
+    "  print conv3.shape\n",
+    "  print conv4.shape\n",
     "  print conv_reshaped.shape\n",
     "  print fc1.shape\n",
     "\n",
@@ -265,34 +317,34 @@
     "  pwd = os.getcwd()+\"/\"\n",
     "  print(\"Run the following to start tensorboard server:\\n\" \\\n",
     "        \"tensorboard --logdir=/{}{}\".format(pwd, logs_path))\n",
+    "  \n",
+    "  # Fill in the place holders depending on the context (training? testing?)\n",
+    "  def feed_dict(batch_num, mode):\n",
+    "    if mode == 'train':\n",
+    "      batch_x, batch_y = grab_next_train_batch(batch_num, svhn_train_data, svhn_train_labels, batch_size)\n",
+    "      keep_proba = train_keep_prob\n",
+    "      training_mode = True\n",
     "\n",
+    "    elif mode == 'train_no_dropout':\n",
+    "      batch_x, batch_y = grab_next_train_batch(batch_num, svhn_train_data, svhn_train_labels, test_batch_size)\n",
+    "      keep_proba = 1.0\n",
+    "      training_mode = False\n",
+    "\n",
+    "    elif mode == 'test_no_dropout':\n",
+    "      batch_x = svhn_test_data[:test_batch_size]\n",
+    "      batch_y = svhn_test_labels[:test_batch_size]\n",
+    "      keep_proba = 1.0\n",
+    "      training_mode = False\n",
+    "\n",
+    "    batch_x = normalize_batch(batch_x) # Subtract per image mean\n",
+    "    return {x: batch_x, y_: batch_y, keep_prob: keep_proba, batch_norm_train_mode: training_mode} # can't name values same as keys\n",
+    "  \n",
     "  ##########################################\n",
     "  ##                                      ##\n",
     "  ##           Launch the graph           ##\n",
     "  ##                                      ##\n",
     "  ##########################################\n",
     "  \n",
-    "  # Fill in the place holders depending on the context (training? testing?)\n",
-    "  def feed_dict(mode):\n",
-    "    if mode == 'train':\n",
-    "      batch_x, batch_y = svhn_train.next_batch(batch_size)\n",
-    "      keep_proba = train_keep_prob\n",
-    "      training_mode = True\n",
-    "\n",
-    "    elif mode == 'train_no_dropout':\n",
-    "      batch_x, batch_y = svhn_train.next_batch(test_batch_size)\n",
-    "      keep_proba = 1.0\n",
-    "      training_mode = False\n",
-    "\n",
-    "    elif mode == 'test_no_dropout':\n",
-    "      batch_x = svhn_test.images[:test_batch_size]\n",
-    "      batch_y = svhn_test.labels[:test_batch_size]\n",
-    "      keep_proba = 1.0\n",
-    "      training_mode = False\n",
-    "\n",
-    "    batch_x = normalize_batch(batch_x) # Subtract per image mean\n",
-    "    return {x: batch_x, y_: batch_y, keep_prob: keep_proba, batch_norm_train_mode: training_mode} # can't name values same as keys\n",
-    "\n",
     "  with tf.Session() as sess:\n",
     "    t_start = time()\n",
     "    sess.run(init)\n",
@@ -305,17 +357,17 @@
     "        if batch_num % test_every == test_every - 1:\n",
     "\n",
     "          # Record summaries and accuracy on the *test* set\n",
-    "          summary, acc = sess.run([merged_summaries, accuracy], feed_dict=feed_dict(mode='test_no_dropout'))\n",
+    "          summary, acc = sess.run([merged_summaries, accuracy], feed_dict=feed_dict(batch_num, mode='test_no_dropout'))\n",
     "          test_writer.add_summary(summary, epoch * total_batches + batch_num)\n",
     "\n",
     "          # To compare against *training* set (apples to apples comparison)\n",
-    "          summary, _, _ = sess.run([merged_summaries, optimizer, extra_update_ops], feed_dict=feed_dict(mode='train_no_dropout'))\n",
+    "          summary, _, _ = sess.run([merged_summaries, optimizer, extra_update_ops], feed_dict=feed_dict(batch_num, mode='train_no_dropout'))\n",
     "          train_writer.add_summary(summary, epoch * total_batches + batch_num)\n",
     "\n",
     "          # Print occasional progress\n",
     "          print('Validation accuracy at epoch %s: batch %s: %s' % (epoch, batch_num, acc))\n",
     "        else:\n",
-    "          sess.run([optimizer, extra_update_ops], feed_dict=feed_dict(mode='train'))\n",
+    "          sess.run([optimizer, extra_update_ops], feed_dict=feed_dict(batch_num, mode='train'))\n",
     "    \n",
     "    train_writer.close()\n",
     "    test_writer.close()\n",
@@ -331,57 +383,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 84,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(?, 32, 32, 3)\n",
-      "(?, 32, 32, 32)\n",
+      "(?, 32, 32, 64)\n",
       "(?, 16, 16, 64)\n",
-      "(?, 16384)\n",
-      "(?, 1024)\n",
+      "(?, 16, 16, 128)\n",
+      "(?, 8, 8, 128)\n",
+      "(?, 8192)\n",
+      "(?, 4096)\n",
       "----------------------------------------------------------------------\n",
       "Run the following to start tensorboard server:\n",
-      "tensorboard --logdir=//home/ec2-user/code/cnn_svhn/logs/20170425_0026/\n",
+      "tensorboard --logdir=//home/ec2-user/code/cnn_svhn/logs/20170425_0419/\n",
       "Learning Rate:  0.001\n",
-      "Validation accuracy at epoch 0: batch 199: 0.4165\n",
-      "Validation accuracy at epoch 0: batch 399: 0.495\n",
-      "Validation accuracy at epoch 0: batch 599: 0.547\n",
-      "Learning Rate:  0.000707107\n",
-      "Validation accuracy at epoch 1: batch 199: 0.601\n",
-      "Validation accuracy at epoch 1: batch 399: 0.598\n",
-      "Validation accuracy at epoch 1: batch 599: 0.6175\n",
-      "Learning Rate:  0.0005\n",
-      "Validation accuracy at epoch 2: batch 199: 0.6245\n",
-      "Validation accuracy at epoch 2: batch 399: 0.603\n",
-      "Validation accuracy at epoch 2: batch 599: 0.644\n",
-      "Learning Rate:  0.000353553\n",
-      "Validation accuracy at epoch 3: batch 199: 0.6585\n",
-      "Validation accuracy at epoch 3: batch 399: 0.653\n",
-      "Validation accuracy at epoch 3: batch 599: 0.644\n",
-      "Learning Rate:  0.00025\n",
-      "Validation accuracy at epoch 4: batch 199: 0.6365\n",
-      "Validation accuracy at epoch 4: batch 399: 0.652\n",
-      "Validation accuracy at epoch 4: batch 599: 0.653\n",
-      "Learning Rate:  0.000176777\n",
-      "Validation accuracy at epoch 5: batch 199: 0.6465\n",
-      "Validation accuracy at epoch 5: batch 399: 0.6435\n",
-      "Validation accuracy at epoch 5: batch 599: 0.6535\n",
-      "Learning Rate:  0.000125\n",
-      "Validation accuracy at epoch 6: batch 199: 0.6595\n",
-      "Validation accuracy at epoch 6: batch 399: 0.65\n",
-      "Validation accuracy at epoch 6: batch 599: 0.6495\n",
-      "Learning Rate:  8.83883e-05\n",
-      "Validation accuracy at epoch 7: batch 199: 0.649\n",
-      "Validation accuracy at epoch 7: batch 399: 0.6505\n",
-      "Validation accuracy at epoch 7: batch 599: 0.628\n",
+      "Validation accuracy at epoch 0: batch 199: 0.5945\n",
+      "Validation accuracy at epoch 0: batch 399: 0.655\n",
+      "Validation accuracy at epoch 0: batch 599: 0.689\n",
+      "Validation accuracy at epoch 0: batch 799: 0.695\n",
+      "Validation accuracy at epoch 0: batch 999: 0.705\n",
+      "Validation accuracy at epoch 0: batch 1199: 0.7085\n",
+      "Validation accuracy at epoch 0: batch 1399: 0.7195\n",
+      "Validation accuracy at epoch 0: batch 1599: 0.7145\n",
+      "Validation accuracy at epoch 0: batch 1799: 0.716\n",
+      "Validation accuracy at epoch 0: batch 1999: 0.715\n",
+      "Validation accuracy at epoch 0: batch 2199: 0.7175\n",
+      "Validation accuracy at epoch 0: batch 2399: 0.7085\n",
+      "Validation accuracy at epoch 0: batch 2599: 0.7235\n",
+      "Validation accuracy at epoch 0: batch 2799: 0.7215\n",
+      "Validation accuracy at epoch 0: batch 2999: 0.7295\n",
+      "Validation accuracy at epoch 0: batch 3199: 0.724\n",
+      "Validation accuracy at epoch 0: batch 3399: 0.7245\n",
+      "Validation accuracy at epoch 0: batch 3599: 0.7345\n",
+      "Validation accuracy at epoch 0: batch 3799: 0.732\n",
+      "Validation accuracy at epoch 0: batch 3999: 0.7385\n",
+      "Validation accuracy at epoch 0: batch 4199: 0.7225\n",
+      "Validation accuracy at epoch 0: batch 4399: 0.7325\n",
+      "Validation accuracy at epoch 0: batch 4599: 0.73\n",
+      "Validation accuracy at epoch 0: batch 4799: 0.728\n",
+      "Validation accuracy at epoch 0: batch 4999: 0.737\n",
+      "Validation accuracy at epoch 0: batch 5199: 0.7245\n",
+      "Validation accuracy at epoch 0: batch 5399: 0.733\n",
+      "Validation accuracy at epoch 0: batch 5599: 0.7035\n",
+      "Validation accuracy at epoch 0: batch 5799: 0.71\n",
+      "Validation accuracy at epoch 0: batch 5999: 0.71\n",
+      "Learning Rate:  0.000249943\n",
+      "Validation accuracy at epoch 1: batch 199: 0.7245\n",
+      "Validation accuracy at epoch 1: batch 399: 0.7345\n",
+      "Validation accuracy at epoch 1: batch 599: 0.7305\n",
+      "Validation accuracy at epoch 1: batch 799: 0.741\n",
+      "Validation accuracy at epoch 1: batch 999: 0.731\n",
+      "Validation accuracy at epoch 1: batch 1199: 0.7175\n",
+      "Validation accuracy at epoch 1: batch 1399: 0.732\n",
+      "Validation accuracy at epoch 1: batch 1599: 0.7355\n",
+      "Validation accuracy at epoch 1: batch 1799: 0.738\n",
+      "Validation accuracy at epoch 1: batch 1999: 0.746\n",
+      "Validation accuracy at epoch 1: batch 2199: 0.7475\n",
+      "Validation accuracy at epoch 1: batch 2399: 0.748\n",
+      "Validation accuracy at epoch 1: batch 2599: 0.7375\n",
+      "Validation accuracy at epoch 1: batch 2799: 0.7405\n",
+      "Validation accuracy at epoch 1: batch 2999: 0.7495\n",
+      "Validation accuracy at epoch 1: batch 3199: 0.75\n",
+      "Validation accuracy at epoch 1: batch 3399: 0.7465\n",
+      "Validation accuracy at epoch 1: batch 3599: 0.752\n",
+      "Validation accuracy at epoch 1: batch 3799: 0.75\n",
+      "Validation accuracy at epoch 1: batch 3999: 0.7555\n",
+      "Validation accuracy at epoch 1: batch 4199: 0.7455\n",
+      "Validation accuracy at epoch 1: batch 4399: 0.7525\n",
+      "Validation accuracy at epoch 1: batch 4599: 0.75\n",
+      "Validation accuracy at epoch 1: batch 4799: 0.7455\n",
+      "Validation accuracy at epoch 1: batch 4999: 0.7465\n",
+      "Validation accuracy at epoch 1: batch 5199: 0.7505\n",
+      "Validation accuracy at epoch 1: batch 5399: 0.748\n",
+      "Validation accuracy at epoch 1: batch 5599: 0.739\n",
+      "Validation accuracy at epoch 1: batch 5799: 0.7285\n",
+      "Validation accuracy at epoch 1: batch 5999: 0.7245\n",
       "\n",
-      "Optimization Finished! in 3.98301228285 minutes\n"
+      "Optimization Finished! in 22.7281504313 minutes\n"
      ]
     }
    ],
@@ -393,17 +478,19 @@
     "##########################################\n",
     "\n",
     "# Training Parameters\n",
-    "total_batches = int(svhn_train.num_examples / batch_size)\n",
-    "\n",
-    "learning_rate_init = 0.001\n",
-    "decay_steps = total_batches * 2 #2000\n",
-    "decay_rate = 0.5 #0.95\n",
-    "\n",
-    "training_epochs = 8\n",
-    "\n",
     "batch_size = 100\n",
     "test_batch_size = 2000\n",
     "test_every = 200\n",
+    "\n",
+    "total_batches = int(len(svhn_train_data) / batch_size)\n",
+    "\n",
+    "learning_rate_init = 0.001\n",
+    "decay_steps = total_batches / 2 #2000\n",
+    "decay_rate = 0.5 #0.95\n",
+    "\n",
+    "training_epochs = 2\n",
+    "\n",
+    "\n",
     "\n",
     "# Regularization\n",
     "fc_decay = 0.0\n",
@@ -411,10 +498,7 @@
     "\n",
     "model_name = \"baseline_old_data\"\n",
     "\n",
-    "\n",
-    "\n",
-    "run()\n",
-    "3x3 no pool, 3x3 pool"
+    "run()\n"
    ]
   },
   {
